--- a/pages/myself/myself.wxss
+++ b/pages/myself/myself.wxss
@@ -4,18 +4,24 @@
   flex-direction: row;
   align-items: center;
   width: 100%;
+  height: 300rpx;
+  position: relative;
 }
 
 .userinfo-avatar {
-  width: 100rpx;
-  height: 100rpx;
-  margin: 60rpx 20rpx;
+  width: 140rpx;
+  height: 140rpx;
+  margin: 30rpx auto 0;
   border-radius: 50%;
+  z-index:1;
+
 }
 
 .userinfo-nickname {
   color: #000;
   font-size: 38rpx;
+  z-index:1;
+  margin: 0 auto;
 }
 .point-right{
   width: 30rpx;
@@ -24,9 +30,16 @@
   position: absolute;
   right: 30rpx;
 }
+.img-background{
+  width: 100%;
+  height: 300rpx;
+  position: absolute;
+  z-index: 0;
+}
 .entry-box{
   height: 50rpx;
   padding: 20rpx;
+  border-bottom: 2rpx solid #f0f0f0;
 }
 .img-mark{
   width: 50rpx;
@@ -43,4 +56,24 @@
   margin-top:10rpx;
   position: absolute;
   right: 30rpx;
+}
+.userinfoView{
+  margin:0 auto;
+  z-index:1;
+  text-align:center;
+}
+.order-box{
+  padding: 20rpx;
+  display:flex;
+  justify-content:space-around;
+  text-align: center;
+  font-size:24rpx;
+}
+.order-icon{
+  height:48rpx;
+  width:48rpx;
+}
+.brViewBg{
+  height: 20rpx;
+  background: #f0f0f0;
 }
